# hr-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEVELOPMENT_PROMPTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  uvicorn_config.json
HR_Agent_Spec_Documents/: 01_PRD.md  02_SYSTEM_ARCHITECTURE.md  03_DATA_MODEL.md  04_LLM_EXTRACTION_SPEC.md  05_MATCHING_ENGINE_SPEC.md  06_API_SPEC.md  07_DATABASE_SCHEMA.md  08_ROADMAP.md  09_CURSOR_IMPLEMENTATION_PLAN.md
data/: github_demo_profiles.json  linkedin_candidates.json
frontend/: nginx.conf  package-lock.json
frontend/src/: App.tsx
hr_agent/: config.py  database.py  logging_config.py  main.py
hr_agent/api/: admin.py  auth.py  candidates.py  deps.py  jobs.py  matches.py  sources.py  users.py
hr_agent/core/: errors.py  permissions.py  security.py
hr_agent/models/: __init__.py  candidate.py  candidate_import.py  embedding.py  job.py  match_result.py  processing_log.py  role.py  user.py  user_role.py
hr_agent/prompts/: cv_extraction.txt  jd_extraction.txt  reranking.txt
hr_agent/schemas/: candidate.py  job.py  match.py  user.py
hr_agent/services/: auth_service.py  candidate_service.py  embedding_service.py  extraction_service.py  matching_service.py  pdf_service.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_new_extraction_fields.py  (+7 more)
scripts/: smoke_test.py
tests/: conftest.py  test_auth.py  test_github_query.py  test_matching_service.py  test_pdf_service.py  test_positions.py
(+29 files in other folders)
